# UpdateLock

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  LockWeChat4.ps1  README.md  Run.bat  UpdateLock.bat  UpdateLock.ps1  build.bat  build.ps1  rules.json
.github/workflows/: build.yml
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: immunizer.cc  immunizer.h  main.cc  process_manager.cc  process_manager.h  security_manager.cc  security_manager.h  version.h  version.rc
